--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "~11.0.0",
     "@angular/platform-browser-dynamic": "~11.0.0",
     "@angular/router": "~11.0.0",
+    "@material/form-field": "^14.0.0",
     "ngx-cookie-service": "^11.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
